@@ -44,7 +44,7 @@ public class FormUrlProcessor extends AbstractUrlProcessor {
 	 */
 	public String processUrl(HttpServletRequest request, String url) {
 
-		UrlData urlData = super.createUrlData(url, request);
+		UrlData urlData = super.createUrlData(url, true, request);
 		if (super.isHdivStateNecessary(urlData)) {
 			// the url needs protection
 			IDataComposer dataComposer = HDIVUtil.getDataComposer(request);
