@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://www.springframework.org/schema/beans"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd">
+
+	<bean id="requestDataValueProcessor"
+		class="org.hdiv.web.servlet.support.HdivRequestDataValueProcessor">
+
+		<property name="linkUrlProcessor" ref="linkUrlProcessor" />
+		<property name="formUrlProcessor" ref="formUrlProcessor" />
+	</bean>
+
+</beans>
