@@ -1,15 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
-<beans>
-	<bean id="multipartResolver" class="org.hdiv.web.multipart.HdivCommonsMultipartResolver">
-		<property name="maxUploadSize" value="100000" />
-	</bean>
-
-	<bean id="multipartConfig" class="org.hdiv.config.multipart.SpringMVCMultipartConfig"></bean>
-
-	<bean id="requestDataValueProcessor"
-		class="org.hdiv.web.servlet.support.HdivRequestDataValueProcessor">
-		<property name="hdivConfig" ref="config" />
-	</bean>
-
-</beans>
